tigergraph-server/3.6/user-access/role-management.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)[Next](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  *     * [TigerGraph Server](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
      * [Internal Architecture](https://docs.tigergraph.com/tigergraph-server/3.6/intro/internal-architecture)
      * [Multigraph Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/multigraph-overview)
      * [Transaction Processing and ACID Support](https://docs.tigergraph.com/tigergraph-server/3.6/intro/transaction-and-acid)
      * [Continuous Availability Overview](https://docs.tigergraph.com/tigergraph-server/3.6/intro/continuous-availability-overview)
      * [Comparing TigerGraph Editions](https://docs.tigergraph.com/tigergraph-server/3.6/intro/comparison-of-editions)
      * [Release and Patch Process](https://docs.tigergraph.com/tigergraph-server/3.6/intro/release-process)
  *     * Getting Started
      * [Get Started with Docker](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/docker)
      * Get Started with Cloud Images
        * [Get Started on AWS](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/aws)
        * [Get Started on Microsoft Azure](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/azure)
        * [Get Started on Google Cloud](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/cloud-images/gcp)
      * [Install TigerGraph on Linux](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/linux)
      * [Get Started with Virtual Box](https://docs.tigergraph.com/tigergraph-server/3.6/getting-started/virtual-box)
      * Learn GSQL
        * [GSQL 101](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/gsql-101/)
        * [Pattern Matching Tutorial](https://docs.tigergraph.com/gsql-ref/3.6/tutorials/pattern-matching/)
  *     * Installation
      * [Hardware and Software Requirements](https://docs.tigergraph.com/tigergraph-server/3.6/installation/hw-and-sw-requirements)
      * [Installation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/install)
      * [Upgrade](https://docs.tigergraph.com/tigergraph-server/3.6/installation/upgrade)
      * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/installation/uninstallation)
      * [Advanced License Issues](https://docs.tigergraph.com/tigergraph-server/3.6/installation/license)
  *     * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/)
      * [Quickstart with EKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-eks)
      * [Quickstart with AKS](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-aks)
      * [Quickstart with GKE](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/quickstart-with-gke)
      * [Kubernetes Operator](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/)
        * [Kubernetes (Preview)](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/installation)
        * [Cluster Operations](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/cluster-operations)
        * [Connecting to a Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/connect-to-cluster)
        * [Uninstallation](https://docs.tigergraph.com/tigergraph-server/3.6/kubernetes/k8s-operator/uninstallation)
  *     * [The GSQL Shell](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/)
      * [GSQL Shell Sessions](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/gsql-sessions)
      * [Using a Remote GSQL Client](https://docs.tigergraph.com/tigergraph-server/3.6/gsql-shell/using-a-remote-gsql-client)
  *     * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
      * [Enabling User Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/enabling-user-authentication)
      * [Managing Credentials](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/managing-credentials)
      * [Access Control Model in TigerGraph](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model)
      * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)
      * [User Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/user-management)
      * [ACL Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management)
      * [Vertex-Level Access Control (Deprecated)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/vlac)
      * [Single Sign-On](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/sso)
      * [Lightweight Directory Access Protocol (LDAP)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/ldap)
  *     * High Availability
      * [High Availability Cluster Configuration](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-cluster)
      * [High Availability Support for GSQL Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-gsql-server)
      * [High Availability Support for Application Server](https://docs.tigergraph.com/tigergraph-server/3.6/ha/ha-for-application-server)
      * [Compute-on-demand Elastic Cluster](https://docs.tigergraph.com/tigergraph-server/3.6/ha/elastic-cluster)
      * [Cluster Commands](https://docs.tigergraph.com/tigergraph-server/3.6/ha/cluster-commands)
      * [Removal of Failed Nodes](https://docs.tigergraph.com/tigergraph-server/3.6/ha/remove-failed-node)
  *     * [Cluster Resizing](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/)
      * [Cluster Expansion](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/expand-a-cluster)
      * [Cluster Shrinking](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/shrink-a-cluster)
      * [Cluster Repartition](https://docs.tigergraph.com/tigergraph-server/3.6/cluster-resizing/repartition-a-cluster)
  *     * [Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/)
      * [Set Up Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/set-up-crr)
      * [Fail over to the DR cluster](https://docs.tigergraph.com/tigergraph-server/3.6/crr/fail-over)
      * [Troubleshooting for Cross-Region Replication](https://docs.tigergraph.com/tigergraph-server/3.6/crr/troubleshooting)
      * [FAQ](https://docs.tigergraph.com/tigergraph-server/3.6/crr/faq)
  *     * [Database Definition](https://docs.tigergraph.com/tigergraph-server/3.6/data-definition/README)
  *     * [Data Loading](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/)
      * [AWS S3 Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/s3-loader-user-guide)
      * [Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/)
        * [Data Loading with Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/load-data)
        * [Kafka Data Source Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-data-source)
        * [Kafka Loader Loading Job Management](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/manage-loading-jobs)
        * [SSL/SASL Authentication for Kafka Loader](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/kafka-loader/kafka-ssl-sasl)
      * [Spark Connection Via JDBC Driver](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/spark-connection-via-jdbc-driver)
      * [Data Streaming Connector](https://docs.tigergraph.com/tigergraph-server/3.6/data-loading/data-streaming-connector)
  *     * [Querying](https://docs.tigergraph.com/tigergraph-server/3.6/data-querying/README)
  *     * [System Management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-with-gadmin)
      * [Memory management](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/memory-management)
      * [Manage TigerGraph services](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/manage-services)
      * [Command Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/system-management/management-commands)
  *     * [Security](https://docs.tigergraph.com/tigergraph-server/3.6/security/)
      * [Encrypting Connections](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-connections)
      * [Encrypting Data At Rest](https://docs.tigergraph.com/tigergraph-server/3.6/security/encrypting-data-at-rest)
      * [File Output Policy](https://docs.tigergraph.com/tigergraph-server/3.6/security/file-output-policy)
  *     * [Database Import/Export](https://docs.tigergraph.com/tigergraph-server/3.6/import-export/database-import-export)
  *     * [Backup and Restore](https://docs.tigergraph.com/tigergraph-server/3.6/backup-and-restore/)
  *     * [REST API Reference](https://docs.tigergraph.com/tigergraph-server/3.6/API/)
      * [Authentication](https://docs.tigergraph.com/tigergraph-server/3.6/API/authentication)
      * [Built-in Endpoints](https://docs.tigergraph.com/tigergraph-server/3.6/API/built-in-endpoints)
      * [Built-in Endpoints JSON Catalog](https://docs.tigergraph.com/tigergraph-server/3.6/API/json-catalog)
  *     * Troubleshooting
      * [Knowledge base and FAQs](https://kb.tigergraph.com/)
      * [System Administration FAQs](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/system-administration-faqs)
      * [Log files](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/log-files)
        * [Set up Log Viewing with Elasticsearch, Kibana and Filebeat](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/elk-filebeat)
      * [Troubleshooting Guide](https://docs.tigergraph.com/tigergraph-server/3.6/troubleshooting/troubleshooting-guide)
  *     * [Release Notes](https://docs.tigergraph.com/tigergraph-server/3.6/release-notes/)
  *     * [Patents and Third Party Software](https://docs.tigergraph.com/tigergraph-server/3.6/legal/patents-and-third-party-software)
  *     * References
      * [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/3.6/reference/configuration-parameters)
      * [Return codes](https://docs.tigergraph.com/tigergraph-server/3.6/reference/return-codes)
      * [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges)
      * [List of Ports](https://docs.tigergraph.com/tigergraph-server/3.6/reference/ports)
      * [Glossary](https://docs.tigergraph.com/tigergraph-server/3.6/reference/glossary)


TigerGraph DB 3.6
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [TigerGraph Server 3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [User Access Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/)
  * [Role Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management)


[Edit this Page](https://github.com/tigergraph/server-docs/edit/3.6/modules/user-access/pages/role-management.adoc)
### Contents
  * [Create a local role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_local_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure)
  * [Create a global role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_global_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_2)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_2)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_2)
  * [View privileges of a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_view_privileges_of_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_3)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_3)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_3)
  * [List all existing roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_list_all_existing_roles)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_4)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_4)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_4)
  * [Grant privileges to a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_grant_privileges_to_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_5)
  * [Require privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_require_privilege)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_5)
  * [Revoke privileges from a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_revoke_privileges_from_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_6)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_5)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_6)
  * [Drop a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_drop_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_7)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_6)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_7)


# Role Management
### Contents
  * [Create a local role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_local_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure)
  * [Create a global role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_global_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_2)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_2)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_2)
  * [View privileges of a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_view_privileges_of_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_3)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_3)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_3)
  * [List all existing roles](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_list_all_existing_roles)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_4)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_4)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_4)
  * [Grant privileges to a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_grant_privileges_to_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_5)
  * [Require privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_require_privilege)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_5)
  * [Revoke privileges from a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_revoke_privileges_from_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_6)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_5)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_6)
  * [Drop a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_drop_a_role)
  * [Syntax](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_7)
  * [Required privilege](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_6)
  * [Procedure](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_7)


This page explains the procedures for various role management tasks under TigerGraph’s role-based access control model.
To see role management tasks under the [Access Control List (ACL)](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists) model, see [ACL Management](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management).
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_local_role)Create a local role
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax)Syntax
```
CREATE ROLE <role_name> (, <role_name>)* [ON GRAPH <graph_name>]
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege)Required privilege
`WRITE_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure)Procedure
  1. To create a local role, run the `CREATE ROLE` command like below. If you choose not to specify a graph in the command, the current scope will be used as the scope of the role:
```
GSQL > USE GRAPH example_graph
GSQL > CREATE ROLE role1, role2
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



This will create two roles named `role1` and `role2` on graph `example_graph`. By default, these two roles do not have any privilege:
```
Successfully created local roles for graph 'example_graph': [role1, role2].
```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_create_a_global_role)Create a global role
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_2)Syntax
```
CREATE ROLE <role_name> (, <role_name>)* ON GLOBAL
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_2)Required privilege
`WRITE_ROLE` on the global scope
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_2)Procedure
  1. To create a global role, run the `CREATE ROLE` command like below. Replace `role1` with the name of the role you are creating.


```
CREATE ROLE role1 ON GLOBAL
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

This will create a role named `role1` on the global scope. By default, this role has no privileges:
```
Successfully created global roles: [role1].
![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_view_privileges_of_a_role)View privileges of a role
Users with the `READ_ROLE` privilege in a scope can view the RBAC privileges on the roles in that scope.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_3)Syntax
```
SHOW PRIVILEGE ON ROLE <role_name> (, <role_name2>)*
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_3)Required privilege
`READ_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_3)Procedure
  1. To view the privileges of a role, run the `SHOW PRIVILEGE ON ROLE` command, and replace `role1, role2` with the names of the roles whose privileges you want to view:


```
GSQL > SHOW PRIVILEGE ON ROLE role1 , role2
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

This will show the privileges of the role `role1` and `role2:`
```
Role: "role1"
 - Graph 'tpc_graph' Privileges:
  WRITE_QUERY
Role: "role2"
This role has no privilege.
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

To view the ACL privileges of a role, see [View ACL privileges of a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management#_view_acl_privileges_of_a_role).
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_list_all_existing_roles)List all existing roles
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_4)Syntax
```
SHOW ROLE
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_4)Required privilege
`READ_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_4)Procedure
  1. To list all existing roles, first ensure that you are in the correct scope. Run `USE <graph_name>` or `USE GLOBAL` to switch to your desired scope.
  2. Run the `SHOW ROLE` command:
```
GSQL > SHOW ROLE
gsql![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



This will show all the roles in your current scope:
```
 - Builtin Roles:
  observer
  queryreader
  querywriter
  designer
  admin
  globaldesigner
  superuser
 - User Defined Roles:
  - Graph 'tpc_graph' Roles:
   role1
   role2
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_grant_privileges_to_a_role)Grant privileges to a role
Users with the `WRITE_ROLE` privileges on a scope can grant RBAC privileges to the roles in that scope.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_5)Syntax
```
GRANT PRIVILEGE <privilege_name1> (, privilege_name2)*
    [ON GRAPH <graph_name>] TO <role_name1> (, <role_name2>)*
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_require_privilege)Require privilege
`WRITE_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_5)Procedure
  1. To grant privileges to a role, run the `GRANT PRIVILEGE` command from the GSQL shell:
```
GSQL > GRANT PRIVILEGE WRITE_QUERY, WRITE_ROLE
    ON GRAPH example_graph TO role1 , role2
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



This will allow users with the roles `role1` and `role2` to edit and install queries, as well as modify roles on the graph `example_graph`. To see a full list of privileges and the command they allow users to run, see [List of Privileges](https://docs.tigergraph.com/tigergraph-server/3.6/reference/list-of-privileges).
To grant [ACL privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists) to a role, see [Grant ACL privileges to a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management#_grant_acl_privilege_to_a_role).
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_revoke_privileges_from_a_role)Revoke privileges from a role
Users with the `WRITE_ROLE` privileges on a scope can revoke RBAC privileges from the roles in that scope.
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_6)Syntax
```
REVOKE PRIVILEGE <privilege_name1> (, privilege_name2)*
    [ON GRAPH <graph_name>] FROM <role_name1> (, <role_name2>)*
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_5)Required privilege
`WRITE_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_6)Procedure
  1. To revoke privileges from a role, run the `REVOKE PRIVILEGE` command from the GSQL shell:
```
GSQL > REVOKE PRIVILEGE WRITE_QUERY
    ON GRAPH example_graph FROM role1
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



This will revoke the `WRITE_QUERY` privilege from the role `role1` on graph `example_graph.`
To revoke [ACL privileges](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/access-control-model#_access_control_lists) from a role, see [Revoke ACL privileges from a role](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/acl-management#_revoke_acl_privilege_from_a_role).
## [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_drop_a_role)Drop a role
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_syntax_7)Syntax
```
DROP ROLE <role_name> (, <role_name2>)*
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_required_privilege_6)Required privilege
`WRITE_ROLE`
### [](https://docs.tigergraph.com/tigergraph-server/3.6/user-access/role-management#_procedure_7)Procedure
  1. To drop a role, run the `DROP ROLE` command from the GSQL shell:
```
GSQL > DROP ROLE role1 , role2
text![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```



This will drop the roles `role1` and `role2`. This will also revoke the roles from users who have been granted these roles.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


